<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Life Dominator</string>
    <string name="app_id">1475608599374749</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_section3">Results to date</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">NativeLoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">Dont have an account? Sign up!</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string android:id="@+id/string1" name="email_hint" android:layout_width="wrap_content" android:layout_height="wrap_content">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please enter a username, password, and email address</string>
    <string name="signup_error_title">Oops</string>
    <string name="login_error_message">Please enter a username and password</string>
    <string name="login_error_title">Oops</string>
    <string android:id="@+id/string1" name="menu_logout_label" android:layout_width="wrap_content" android:layout_height="wrap_content">Logout</string>
    <string android:id="@+id/string1" name="empty_friends_label" android:layout_width="wrap_content" android:layout_height="wrap_content">Add friends to begin</string>
    <string android:id="@+id/string1" name="empty_inbox_label" android:layout_width="wrap_content" android:layout_height="wrap_content">No new messages</string>
    <string android:id="@+id/string1" name="menu_edit_friends_label" android:layout_width="wrap_content" android:layout_height="wrap_content">Edit Friends</string>
   <string android:id="@+id/string1" name="menu_settings_label" android:layout_width="wrap_content" android:layout_height="wrap_content">Settings</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re sorry, there is an error</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">problem accessing external storage</string>
    <string name="general_error">"Sorry there was an error"</string>

    <string-array name="camera_choices">
        <item android:id="@+id/item1" android:layout_width="wrap_content" android:layout_height="wrap_content">Take Picture</item>
        <item android:id="@+id/item1" android:layout_width="wrap_content" android:layout_height="wrap_content">Take Video</item>
        <item android:id="@+id/item1" android:layout_width="wrap_content" android:layout_height="wrap_content">Choose Picture</item>
        <item android:id="@+id/item1" android:layout_width="wrap_content" android:layout_height="wrap_content">Choose Video</item>
    </string-array>

    <string name="video_file_size_warning">video must be less than 10MB</string>
    <string name="error_opening_file">there was a problem with the selected file</string>
    <string name="file_size_too_large">the selected file is too large</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">There was an error with the selected file, please select a different file</string>
    <string name="error_selecting_file_title">We\'re sorry</string>
    <string name="success_message">message sent</string>
    <string name="error_sending_message">There was an error sending your message, try again</string>
    <string name="title_activity_view_image">Ribbit</string>
    <string name="content_desc_background">Ribbit Frog Background Image</string>
    <string name="subtitle">a treehouse project</string>
    <string name="push_message">you have a new ribbit message from %s!</string>

    <!-- ARMENS CUSTOM STRINGS -->
    <string android:id="@+id/string1" name="empty_peaps_label" android:layout_width="wrap_content" android:layout_height="wrap_content">You aint got no peaps</string>
    <string name="intro_button_test_message">You want to start so bad</string>
    <string name="log_save_success_message">Goal progress successfully logged</string>
    <string name="error_saving_log_title">Error</string>
    <string name="error_saving_log_message">There was an error saving your goal progress, try again</string>
    <string name="goal_1_title">Exercise</string>
    <string name="goal_1_content">How\'d you do yesterday?</string>
    <string name="goal_2_title">Diet</string>
    <string name="goal_2_content">How\'d you do yesterday?</string>
    <string name="goal_3_title">Work</string>
    <string name="goal_3_content">How\'d you do yesterday?</string>
    <string name="goal_not_completed">Incomplete</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="intro_button">Get Started</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_alarm_receiver">AlarmReceiver</string>
    <string name="exercise_results_label">Exercises Dominated: </string>
    <string name="result1_label">Exercise </string>
    <string name="result2_label">Diet </string>
    <string name="result3_label">Work </string>
    <string name="result_total_label">Total: </string>
    <string name="title_activity_user_details">UserDetailsActivity</string>
    <string name="login_facebook_button">Login</string>
    <string name="login">Log in with Facebook</string>
    <string name="logout">Log Out</string>
    <string name="login_intro">Check out your Facebook profile by logging in with the button below!</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="relationship">Relationship</string>
    <string name="title_activity_facebook_friends">FacebookFriends</string>
    <string name="fb_friends_request">Show FB Friends</string>

</resources>