<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nalband.ribbit.UserDetailsActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <com.facebook.widget.ProfilePictureView
            android:id="@+id/userProfilePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="#333"
            android:textSize="18sp" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="85dp"
        android:background="@drawable/table_round_shape"
        android:gravity="center_horizontal" >

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:text="@string/location"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_span="2"
                android:layout_weight="1"
                android:background="#999" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:text="@string/gender"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_span="2"
                android:layout_weight="1"
                android:background="#999" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:text="@string/date_of_birth"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userDateOfBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_span="2"
                android:layout_weight="1"
                android:background="#999" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:text="@string/relationship"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userRelationship"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:background="@drawable/button_login"
        android:text="@string/logout"
        android:textColor="#fff"
        android:textStyle="bold" />

</RelativeLayout>